Bug 133339 - Pixeled images in presentation mode (SKIA)
Summary: Pixeled images in presentation mode (SKIA)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-05-24 09:32 UTC by Telesto
Modified: 2020-05-25 11:54 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (89.75 KB, application/vnd.oasis.opendocument.presentation)
2020-05-24 09:32 UTC, Telesto
Details
embedded PNG is kind of low resolution to start (100.78 KB, image/png)
2020-05-24 13:18 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-05-24 09:32:06 UTC
Description:
Pixeled images in presentation mode

Steps to Reproduce:
1. Open the attached file
2. Press F5

Actual Results:
Pixelated

Expected Results:
GDI results


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha1+ (x64)
Build ID: b587de60d4e6aa96238766272d94f1499b22f696
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-05-24 09:32:23 UTC
Created attachment 161221 [details]
Example file
Comment 2 V Stuart Foote 2020-05-24 13:18:49 UTC
Created attachment 161232 [details]
embedded PNG is kind of low resolution to start

Confirmed on Windows 
Version: 7.0.0.0.alpha1+ (x64)
Build ID: b587de60d4e6aa96238766272d94f1499b22f696
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win; 
Locale: en-US (en_US); UI: en-US
Calc: threaded

RenderMethod: vulkan
Vendor: 0x8086
Device: 0x5916
API: 1.2.135
Driver: 0.401.4091
DeviceType: integrated
DeviceName: Intel(R) HD Graphics 620
Blacklisted: no

The rendering of the slide is visibly different between default GDI (with or without HA) and Skia rendering.  Feels fuzzy with GDI, and pixelated with Skia (Vulkan or raster)  so PNG image is getting different handling.

But, maybe that is not the best image to have scaled for a presentation.
Comment 3 Commit Notification 2020-05-25 11:52:59 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a6f9edbd3bf74022083302c6d857b644d71d2b48

high quality scale when drawing scaled Skia image (tdf#133339)

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.