high quality scale when drawing scaled Skia image (tdf#133339)

Apparently even drawBitmap() may lead to image scaling.

Change-Id: I8665dfc4d12768c3824bbc45aaa72277168acc8d